[gd_scene load_steps=2 format=3 uid="uid://v6u12tydg26f"]

[ext_resource type="Script" uid="uid://cytuljhcebvi4" path="res://Scenes/LightsOut/MainMenuButton.gd" id="1_2q57d"]

[node name="LightsOutMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 1023
visibility_layer = 1023
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0
color = Color(0.25098, 0.407843, 0.717647, 1)

[node name="Easy" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 165.0
offset_top = 202.0
offset_right = 332.0
offset_bottom = 303.0
text = "Easy"

[node name="Medium" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 484.0
offset_top = 202.0
offset_right = 651.0
offset_bottom = 303.0
text = "Medium"

[node name="Difficult" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 795.0
offset_top = 201.0
offset_right = 962.0
offset_bottom = 302.0
text = "Hard"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 20.0
offset_right = 850.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 70
text = "Lights Out!"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 500.0
offset_right = 245.0
offset_bottom = 600.0
text = "Back to Main Menu"
script = ExtResource("1_2q57d")
game_scene = "uid://6vcfcvr2ovo4"

[node name="RulesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 500.0
offset_right = 1100.0
offset_bottom = 600.0
text = "Rules!"

[node name="RulesMenu" type="PopupPanel" parent="."]
title = "Rules"
position = Vector2i(350, 50)
size = Vector2i(400, 500)

[node name="RulesText" type="RichTextLabel" parent="RulesMenu"]
visible = false
top_level = true
light_mask = 1023
visibility_layer = 1023
offset_left = 21.0
offset_top = 18.0
offset_right = 379.0
offset_bottom = 487.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 22
text = "Rules

1. Pressing a button will change it's and the ones around it in a plus shape color

2. You win when all the buttons are colored white

3. The game has 3 difficulties that change the grid size

Easy - 3x3 grid
Medium - 5x5 grid
Hard - 7x7 grid"

[connection signal="ready" from="ColorRect" to="MainMenuButton" method="_on_color_rect_ready"]
[connection signal="pressed" from="MainMenuButton" to="MainMenuButton" method="_on_pressed"]
[connection signal="button_down" from="RulesButton" to="MainMenuButton" method="_on_rules_button_button_down"]
[connection signal="visibility_changed" from="RulesMenu" to="MainMenuButton" method="_on_rules_menu_visibility_changed"]
